Project/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pythondavax-svc
spec:
  type: LoadBalancer
  selector:
    app: pythondavax
  ports:
  - port: 80
    targetPort: 8010
